--- a/characters/templates/add_character.html
+++ b/characters/templates/add_character.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-{{ name }}
+<form action="" method="post">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" value="Submit">
+</form>
 </body>
 </html>
