--- a/roster/templates/players_selection.html
+++ b/roster/templates/players_selection.html
@@ -3,6 +3,15 @@
     <div id="roster">
         {% for boss in object_list %}
         <div class="boss">
+            <p> 
+                {% if boss.bloodlust_buff == 0 %} Bloodlust | {% endif %}
+                {% if boss.attack_power_buff == 0 %} Attack Power | {% endif %}
+                {% if boss.intellect_buff == 0 %} Intellect | {% endif %}
+                {% if boss.stamina_buff == 0 %} Stamina </br> {% endif %}
+                {% if boss.magic_damage_buff == 0 %} Magic Dmg | {% endif %}
+                {% if boss.physical_damage_buff == 0 %} Physical Dmg | {% endif %}
+                {% if boss.devo_aura == 0 %} Devo Aura | {% endif %}
+            </p>
         <div hx-get="{% url 'boss_update' boss.id %}" hx-trigger="load"> </div>
         <h4>{% for player in boss.players.all|dictsortreversed:"role" %}
                 {{ player.name }} - {{ player.role }} </br>
